[gd_scene load_steps=6 format=2]

[ext_resource path="res://nodes/game_camera.gd" type="Script" id=1]
[ext_resource path="res://sounds/level/ocean/ocean_waves_crisp.wav" type="AudioStream" id=2]
[ext_resource path="res://textures/post/lense_smudge_a.png" type="Texture" id=3]
[ext_resource path="res://shaders/camera_lense.shader" type="Shader" id=4]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )
shader_param/glare_amount = 0.5
shader_param/lenseflare_amount = 0.5

[node name="game_camera" type="Spatial"]
script = ExtResource( 1 )

[node name="camera" type="Camera" parent="."]
far = 200.0

[node name="audio_waves" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 2 )
unit_size = 2.0
autoplay = true

[node name="post_fx_1" type="TextureRect" parent="."]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
